# hwinfo-cmake

./: .gitignore  .gitmodules  CMakeLists.txt
config/: hd_ids_tiny.h  version.h
config/cdb/: .depend
easy/: HardwareInfo.cpp  HardwareInfo.h
